Идемпотентность создания сообщений и автотест соответствия OpenAPI-спеки маршрутам
